Bug 1162913 - Footer Newsletter bar is not align correctly
Footer Newsletter bar is now align in center

--- a/src/media/css/newsletter.styl
+++ b/src/media/css/newsletter.styl
@@ -10,6 +10,7 @@ $arrow-size = 10px;
 
 .newsletter {
     position: relative;
+    text-align: center;
 
     form,
     .success {
